---
title: Calculation State
---

classDiagram
    direction LR

    class CalculationState {
        -string code
        -string color
        -bool editable
        -string description
        -Collection~Calculation~ calculations
        +getCode() string
        +setCode(string)
        +getColor() string
        +setColor(string)
        +isEditable() bool
        +setEditable(bool)
        +getDescription() string
        +setDescription(string)
        +getCalculations() Collection~calculations~
        +count() int
    }

    class Calculation {
    }

    class AbstractEntity {
        <<Abstract>>
    }
    class EntityInterface {
        <<Interface>>
    }

    EntityInterface <|.. AbstractEntity
    AbstractEntity <|-- CalculationState
    CalculationState "0" --> "*" Calculation

    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
    click Calculation call nodeCallback()
